--- a/website/main_app/templates/components/header.html
+++ b/website/main_app/templates/components/header.html
@@ -4,30 +4,19 @@
         <a class="back_to_top" title="Наверх">↑</a>
         <div class="header__inner">
             <div class="menu">
+                <div class="menu__btn">
+                    <span></span><span></span><span></span>
+                </div>
                 <ul class="menu__list">
-                    <form method="POST" id="RegForm" action="{% url 'login' %}" class="menu__list-item">{% csrf_token %}
-                        {{ LoginForm.username }}
-                        {{ LoginForm.password }}
+                    <form class="menu__list-item menu__list-form" method="POST" id="LoginForm" action="{% url 'login' %}">{% csrf_token %}
+                        <li class="menu__list-item">{{ LoginForm.username }}</li>
+                        <li class="menu__list-item">{{ LoginForm.password }}</li>
                     </form>
-                    <li class="menu__list-item" onclick="RegForm.submit();"><p class="menu__list-link">Вход</p></li>
+                    <li class="menu__list-item" onclick="LoginForm.submit();"><a class="menu__list-link">Вход</a></li>
                     <li class="menu__list-item"><a class="menu__list-link" href="{% url 'registration' %}">Регистрация</a></li>
                 </ul>
-                <li class="menu__list-item menu__list-link">{{ error_text }}</li>
             </div>
         </div>
     </div>
 </header>
 {% endblock %}
-<!--<ul class="menu__list">-->
-<!--    {% if request.user.is_authenticated %}-->
-<!--    <li class="menu__list-item menu__list-link">Добро пожаловать, {{ request.user.first_name }}</li>-->
-<!--    <li class="menu__list-item"><a class="menu__list-link" href="{% url 'logout' %}">Выход</a></li>-->
-<!--    {% else %}-->
-<!--    <form method="POST" id="RegForm" action="{% url 'login' %}" class="menu__list-item">{% csrf_token %}-->
-<!--        {{ LoginForm.username }}-->
-<!--        {{ LoginForm.password }}-->
-<!--    </form>-->
-<!--    <li class="menu__list-item" onclick="RegForm.submit();"><p class="menu__list-link">Вход</p></li>-->
-<!--    <li class="menu__list-item"><a class="menu__list-link" href="{% url 'registration' %}">Регистрация</a></li>-->
-<!--    {% endif %}-->
-<!--</ul>-->
