--- a/website/main_app/templates/components/about.html
+++ b/website/main_app/templates/components/about.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% block about %}
 <div class="about" id="about">
-    <div class="about__item" style="background-image: url('{% static 'images/small_spb/prscr-4.PNG' %}');">
+    <div class="about__item" style="background-image: url('{% static 'images/small_spb/prscr-4.png' %}');">
         <div class="about__box">
             <div class="about__box-wrapper">
                 <h3 class="about__box-title">Часы приема бухгалтера:</h3>
