--- a/website/main_app/templates/components/history.html
+++ b/website/main_app/templates/components/history.html
@@ -3,6 +3,8 @@
 <div class="history" id="history">
     <h3 class="history__title">"Малый-Петербург" сегодня это:</h3>
     <div class="history__item" style="background-image: url('{% static 'images/small_spb/kvartry-v-malyj-peterburg-1569.jpg' %}');">
+      <div class="about__item" style="background-image: url('{% static 'images/small_spb/prscr-4.PNG' %}');">
+
         <div class="history__box">
             <ul class="history__list">
                 <li class="history__list-item">32 га огороженной территории</li>
