--- a/website/main_app/templates/components/personal_area.html
+++ b/website/main_app/templates/components/personal_area.html
@@ -39,6 +39,14 @@
 				<span class="user_info__info">{{ user.email }}</span>
 				<span class="user_info__sub-title">Изменить пароль</span>
 			</div>
+			<form class="user_info__sub-form">
+				<span class="user_info__sub-title">Изменить пароль:</span>
+				<div class="user_info__sub-form--flex">
+					<input class="user_info__sub-input" type="password" name="" placeholder="пароль">
+					<input class="user_info__sub-input" type="password" name="" placeholder="новый пароль">
+					<button class="user_info__change-passwor">Изменить пароль</button>
+				</div>
+			</form>
 		</div>
 	</div>
 </section>
