--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -94,6 +94,8 @@ a{
     list-style: none;
 }
 .menu__list-form{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .menu__list-item + .menu__list-item{
@@ -158,7 +160,10 @@ a{
     }
 
 .menu__list-form{
-   flex-direction: column; 
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+       -ms-flex-direction: column;
+           flex-direction: column; 
 }
 
     
@@ -169,7 +174,7 @@ a{
 }
 @media (max-width:360px) {
     .menu__list-link{
-        font-size: 20px;
+        font-size: 18px;
     }
 }
 /*----------best--------------------------------*/
