доделаны косяки, добавлены все разделы

--- a/website/main_app/templates/base/base.html
+++ b/website/main_app/templates/base/base.html
@@ -59,6 +59,10 @@
 {% block content %}
 {% endblock %}
 
+<!--  Галерея  -->
+{% block gallery_list %}
+{% endblock %}
+
 <!--  Регистрация  -->
 {% block register_form %}
 {% endblock %}
