--- a/website/main_app/templates/components/faq.html
+++ b/website/main_app/templates/components/faq.html
@@ -1,13 +1,19 @@
 {% block faq %}
-<section class="faq">
-    <div class="container">
-        {% for i in faq %}
-        <div class="faq__item">
-            <h3 class="faq__list-title">{{ i.question }}</h3>
-            <p class="faq__item-text">{{ i.answer }}</p>
+<main class="main">
+    {% block breadcrumbs %}
+    {% include 'components/breadcrumbs.html' %}
+    {% endblock %}
+    <section class="faq">
+        <div class="container">
+            {% for i in faq %}
+            <div class="faq__item">
+                <h3 class="faq__list-title">{{ i.question }}</h3>
+                <p class="faq__item-text">{{ i.answer }}</p>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
-    </div>
-</section>
+    </section>
+</main>
 {% endblock %}
+
 
