--- a/website/main_app/templates/components/breadcrumbs.html
+++ b/website/main_app/templates/components/breadcrumbs.html
@@ -1,5 +1,4 @@
 {% block box-subtitle %}
-{% load my_tags %}
 <div class="breadcrumbs">
     <div class="container">
         <ul class="breadcrumbs__list">
@@ -7,7 +6,7 @@
                 <a class="breadcrumbs__link" href="{% url 'main' %}">Главная</a>
             </li>
             <li class="breadcrumbs__item">
-                <p class="breadcrumbs__link breadcrumbs__link--cursor">{{ obj | to_class_name }}</p>
+                <p class="breadcrumbs__link breadcrumbs__link--cursor">{{ location }}</p>
             </li>
         </ul>
     </div>
