--- a/website/main_app/templates/components/services.html
+++ b/website/main_app/templates/components/services.html
@@ -7,6 +7,15 @@
             <div class="services__slider">
 
                 {% if request.user.is_authenticated %}
+                <a class="services__item" href="{% url 'news' %}">
+                    <div class="services__item-inner">
+                        <img src="{% static 'images/small_spb/3.png' %}" alt="" class="services__item-img">
+                        <h6 class="services__item-title">Новости</h6>
+                    </div>
+                </a>
+                {% endif %}
+
+                {% if request.user.is_authenticated %}
                 <a class="services__item" href="{% url 'electricity' %}">
                     <div class="services__item-inner">
                         <img src="{% static 'images/small_spb/item-2.svg' %}" alt="" class="services__item-img">
@@ -33,10 +42,17 @@
                 </a>
                 {% endif %}
 
+                <a class="services__item" href="{% url 'gallery' %}">
+                    <div class="services__item-inner">
+                        <img src="{% static 'images/small_spb/gallery.jpg' %}" alt="" class="services__item-img">
+                        <h6 class="services__item-title">Галерея</h6>
+                    </div>
+                </a>
+
                 <a class="services__item" href="{% url 'faq' %}">
                     <div class="services__item-inner">
                         <img src="{% static 'images/small_spb/item-1.svg' %}" alt="" class="services__item-img">
-                        <h6 class="services__item-title">FAQ</h6>
+                        <h6 class="services__item-title">Вопросы и ответы</h6>
                     </div>
                 </a>
 
