--- a/website/main_app/templates/components/electricity_table.html
+++ b/website/main_app/templates/components/electricity_table.html
@@ -1,30 +1,34 @@
 {% block elec_table %}
 
 <main class="main">
-        {% block breadcrumbs %}
-        {% include 'components/breadcrumbs.html' %}
-        {% endblock %}
-        <div class="container">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>№ участка</th>
-                        <th>№ лицевого счета </th>
-                        <th>текущие показания день</th>
-                        <th>текущие показания ночь</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for i in electricity %}
-                    <tr>
-                        <td>{{i.area_number}}</td>
-                        <td>{{i.personal_account}}</td>
-                        <td>{{i.current_day}}</td>
-                        <td>{{i.current_night}}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
+  {% block breadcrumbs %}
+  {% include 'components/breadcrumbs.html' %}
+  {% endblock %}
+  <div class="tables">
+    <div class="container">
+      <div class="tables__wrapper">
+        <table class="table">
+          <thead>
+          <tr>
+            <th>№ участка</th>
+            <th>№ лицевого счета </th>
+            <th>текущие показания день</th>
+            <th>текущие показания ночь</th>
+          </tr>
+          </thead>
+          <tbody>
+          {% for i in electricity %}
+          <tr>
+            <td>{{i.area_number}}</td>
+            <td>{{i.personal_account}}</td>
+            <td>{{i.current_day}}</td>
+            <td>{{i.current_night}}</td>
+          </tr>
+          {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </main>
 {% endblock %}
