--- a/website/main_app/templates/components/requisites.html
+++ b/website/main_app/templates/components/requisites.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% block requisites %}
 <div class="cart" id='requisites'>
-    <img class="cart__item-img" src="{% static 'images/small_spb/56671153.jpg' %}">
+    <img class="cart__item-img" data-fancybox="gallery" src="{% static 'images/small_spb/56671153.jpg' %}">
     <div class="cart__box">
         <h3 class="cart__box-title">Реквизиты для б/н уплаты "Ежемесячного взноса"</h3>
         <ul class="cart__list">
