--- a/website/main_app/templates/base/base.html
+++ b/website/main_app/templates/base/base.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'css/slick.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fancybox.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
@@ -70,6 +71,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="{% static 'js/slick.min.js'%}"></script>
+<script src="{% static 'js/fancybox.umd.js'%}"></script>
 <!--<script src="js/jquery.fancybox.min.js"></script>-->
 <script src="{% static 'js/main.js'%}"></script>
 <!--<script src="{% static 'js/script.js'%}"></script>-->
