допил моб версии

--- a/website/main_app/templates/components/best.html
+++ b/website/main_app/templates/components/best.html
@@ -1,4 +1,5 @@
 {% block best %}
+{% load static %}
 
 <section class="best" style="background-image: url('/media/logo/logo.jpg');">
     <div class="best__inner">
@@ -7,4 +8,51 @@
         </div>
     </div>
 </section>
+<!--<div class="rightside-menu rightside-menu&#45;&#45;close">-->
+<!--    <button class="rightside-menu__close">-->
+<!--        <img src="images/small_spb/close.svg" alt="close">-->
+<!--    </button>-->
+<!--    <div class="menu-burger">-->
+<!--        <button class="menu__btn">-->
+<!--            <img  class="menu__img" src="{% static 'images/small_spb/icon_menu.svg' %}" alt="icon menu">-->
+<!--        </button>-->
+<!--    </div>-->
+<!--    <div class="rightside-menu__content">-->
+<!--        <ul class="rightside-menu__register-list">-->
+<!--            <form class="rightside-menu__register-item rightside-menu__register-form">-->
+<!--                <li class="rightside-menu__register-item"><input class="rightside-menu__register-item&#45;&#45;input-style" type="text" name="login" placeholder="логин"></li>-->
+<!--                <li class="rightside-menu__registert-item"><input class="rightside-menu__register-item&#45;&#45;input-style" type="text" name="pass" placeholder="пароль"></li>-->
+<!--            </form>-->
+<!--            <li class="rightside-menu__register-item"><a class="rightside-menu__register-link" href="#">Вход</a></li>-->
+<!--            <li class="rightside-menu__register-item"><a class="rightside-menu__register-link" href="#">Регистрация</a></li>-->
+<!--        </ul>-->
+<!--        <h5 class="rightside-menu__title">Меню</h5>-->
+<!--        <ul>-->
+<!--            <li class="rightside-menu__item">-->
+<!--                <a class="rightside-menu__link">Показания эл.энергии </a>-->
+<!--            </li>-->
+<!--            <li class="rightside-menu__item">-->
+<!--                <a class="rightside-menu__link">Документы</a>-->
+<!--            </li>-->
+<!--            <li class="rightside-menu__item">-->
+<!--                <a class="rightside-menu__link">Должники</a>-->
+<!--            </li>-->
+<!--            <li class="rightside-menu__item">-->
+<!--                <a class="rightside-menu__link">Обратная связь</a>-->
+<!--            </li>-->
+<!--            <li class="rightside-menu__item">-->
+<!--                <a class="rightside-menu__link">О нас</a>-->
+<!--            </li>-->
+<!--            <li class="rightside-menu__item">-->
+<!--                <a class="rightside-menu__link">Новости</a>-->
+<!--            </li>-->
+<!--            <li class="rightside-menu__item">-->
+<!--                <a class="rightside-menu__link">Галерея</a>-->
+<!--            </li>-->
+<!--            <li class="rightside-menu__item">-->
+<!--                <a class="rightside-menu__link">FAQ</a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--</div>-->
 {% endblock %}
