--- a/website/main_app/templates/components/header.html
+++ b/website/main_app/templates/components/header.html
@@ -1,12 +1,15 @@
 {% block header %}
+{% load static %}
+
+
 <header class="header">
     <div class="container">
         <a class="back_to_top" title="Наверх">↑</a>
         <div class="header__inner">
             <div class="menu">
-                <div class="menu__btn">
-                    <span></span><span></span><span></span>
-                </div>
+                <button class="menu__btn">
+                    <img  class="menu__img" src="{% static 'images/small_spb/icon_menu.svg' %}" alt="icon menu">
+                </button>
                 <ul class="menu__list">
                     <form class="menu__list-item menu__list-form" method="POST" id="LoginForm" action="{% url 'login' %}">{% csrf_token %}
                         <li class="menu__list-item">{{ LoginForm.username }}</li>
@@ -19,4 +22,56 @@
         </div>
     </div>
 </header>
+<div class="rightside-menu rightside-menu--close">
+    <button class="rightside-menu__close">
+        <img src="{% static 'images/small_spb/close.svg' %}" alt="close">
+    </button>
+    <div class="menu-burger">
+        <button class="menu__btn">
+            <img  class="menu__img" src="{% static 'images/small_spb/icon_menu.svg' %}" alt="icon menu">
+        </button>
+    </div>
+    <div class="rightside-menu__content">
+        <ul class="rightside-menu__register-list">
+            <form class="rightside-menu__register-item rightside-menu__register-form">
+                <li class="rightside-menu__register-item">{{ LoginForm.username }}</li>
+                <li class="rightside-menu__registert-item">{{ LoginForm.password }}</li>
+            </form>
+            <li class="rightside-menu__register-item"><a class="rightside-menu__register-link" href="#">Вход</a></li>
+            <li class="rightside-menu__register-item"><a class="rightside-menu__register-link" href="#">Регистрация</a></li>
+        </ul>
+        <h5 class="rightside-menu__title">Меню</h5>
+        <ul>
+            {% if request.user.is_authenticated %}
+            <li class="rightside-menu__item">
+                <a class="rightside-menu__link" href="{% url 'news' %}">Новости</a>
+            </li>
+            <li class="rightside-menu__item">
+                <a class="rightside-menu__link" href="{% url 'electricity' %}">Показания эл.энергии </a>
+            </li>
+            <li class="rightside-menu__item">
+                <a class="rightside-menu__link" href="{% url 'documents' %}">Документы</a>
+            </li>
+            <li class="rightside-menu__item">
+                <a class="rightside-menu__link" href="{% url 'debstors' %}">Должники</a>
+            </li>
+            {% endif %}
+            <li class="rightside-menu__item">
+                <a class="rightside-menu__link" href="{% url 'gallery' %}">Галерея</a>
+            </li>
+            <li class="rightside-menu__item">
+                <a class="rightside-menu__link" href="{% url 'faq' %}">Вопросы и ответы</a>
+            </li>
+            <li class="rightside-menu__item">
+                <a class="rightside-menu__link" href="{% url 'feedback' %}">Обратная связь</a>
+            </li>
+            <li class="rightside-menu__item">
+                <a class="rightside-menu__link" href="{% url 'content' %}">О нас</a>
+            </li>
+
+
+        </ul>
+
+    </div>
+</div>
 {% endblock %}
