--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -85,13 +85,17 @@ a{
 
 /*-------menu--------------*/
 .menu{
-    margin-left: auto;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    align-items: flex-start;
 }
 .menu__list{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     list-style: none;
+    
 }
 .menu__list-form{
     display: -webkit-box;
@@ -181,6 +185,182 @@ a{
         font-size: 18px;
     }
 }
+/*----------rightside-menu--------------------------------*/
+.menu-burger{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 100%;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+}
+.menu__btn{
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    width: 37px;
+    height: 29px;
+    display: none;
+}
+.rightside-menu {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    max-width: 320px;
+    background-color: rgb(43 64 116);
+    padding-top: 17px;
+    -webkit-box-shadow: 31px -17px 100px 0 #000;
+            box-shadow: 31px -17px 100px 0 #000;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    z-index: 10;
+}
+.rightside-menu__title{
+    
+    margin-bottom: 60px;
+    font-size: 38px;
+      color: white;
+      font-weight: 500;
+      font-family: 'Montserrat', sans-serif;
+      text-decoration: none;
+}
+    .rightside-menu--close {
+      -webkit-transform: translateX(-500%);
+          -ms-transform: translateX(-500%);
+              transform: translateX(-500%);
+    }
+  
+    .rightside-menu__close {
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      cursor: pointer;
+      margin-left: 280px;
+      margin-bottom: 60px;
+    }
+  
+    .rightside-menu__content {
+      max-width: 485px;
+      text-align: center;
+      margin: 0 auto;
+    }
+  .rightside-menu__item{
+      list-style: none;
+      border-bottom: 1px solid white;
+      padding-bottom: 35px;
+      margin-bottom: 35px;
+      cursor: pointer;
+  }
+    .rightside-menu__link{
+      margin-bottom: 75px;
+      color: white;
+      font-weight: 500;
+      font-family: 'Montserrat', sans-serif;
+      text-decoration: none;
+    }
+
+    .rightside-menu__register-list{
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        list-style: none;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        margin-bottom: 100px;
+    }
+    .rightside-menu__register-form{
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+    }
+    .rightside-menu__register-item--input-style{
+        border: 1px solid #DFDFDF;
+        padding: 6px 17px;
+        border-radius:20px;
+        margin-bottom:20px;     
+    }
+    .rightside-menu__register-item--input-style::-webkit-input-placeholder{
+        color: #A1A1A1;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-weight:400;
+        font-size:16px;
+        line-height:27px;
+    }
+    .rightside-menu__register-item--input-style::-moz-placeholder{
+        color: #A1A1A1;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-weight:400;
+        font-size:16px;
+        line-height:27px;
+    }
+    .rightside-menu__register-item--input-style:-ms-input-placeholder{
+        color: #A1A1A1;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-weight:400;
+        font-size:16px;
+        line-height:27px;
+    }
+    .rightside-menu__register-item--input-style::-ms-input-placeholder{
+        color: #A1A1A1;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-weight:400;
+        font-size:16px;
+        line-height:27px;
+    }
+    .rightside-menu__register-item--input-style::placeholder{
+        color: #A1A1A1;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-weight:400;
+        font-size:16px;
+        line-height:27px;
+    }
+    .rightside-menu__register-link{
+        color: #fff;
+        font-size: 22px;
+        line-height:28px;
+        text-decoration: none;
+        font-weight:400 ;
+        letter-spacing:.2rem;
+        font-family: 'Montserrat', sans-serif;
+        cursor: pointer;
+    }
+
+    @media (max-width:800px) {
+       .menu{
+        max-width: 300px;   
+         -webkit-box-pack: left;   
+             -ms-flex-pack: left;   
+                 justify-content: left;
+        margin-right: 230px;
+       }
+       .menu__list{
+           display: none;
+       }
+        .menu__btn{
+            display: block;
+        }
+        .services{
+            display: none;
+        }
+    }
+  
+
 /*----------best--------------------------------*/
 .best{
     
@@ -240,7 +420,7 @@ a{
         margin-top: -194px;
     }
     .best__title{
-           margin-bottom: 110px;
+               margin-bottom: 50px;
     }
 } 
 @media (max-width:710px) {
@@ -248,30 +428,18 @@ a{
         font-size:40px;
     }
 } 
-@media (max-width: 450px){
-.best__title {
-    font-size: 30px;
-}}
+
 @media (max-width:520px) {
- 
-.best__inner {
-   
-    padding:  40px 0;
-   
+    .best__inner {
+        
+        padding:  40px 0;
+    }
+ }
+@media (max-width: 500px){
+    .best__title {
+        font-size: 28px;
+    }
 }
- 
-}
-
-
-@media (max-width: 445px)
-.best__title {
-    font-size: 34px;
-}
-
-
-
-
-
 
 
 @media (max-width:380px) {
@@ -434,6 +602,11 @@ a{
 .slick-dots .slick-active button{
     background-color: #2B4074;
 }
+@media (max-width:800px) {
+   .services {
+    margin-top: 19px;
+   }
+}
 
 /*---------box-subtitle--------------------------------*/
 .box-subtitle{
@@ -473,6 +646,7 @@ a{
     font-family: 'Montserrat', sans-serif;
     cursor: default;
 }
+
 .news__wrapper{
     padding-left:20px;
     padding-right:30px;
@@ -480,16 +654,21 @@ a{
     height: 100px;
     overflow: hidden;
     position: relative;
+   
 } 
 .news__wrapper--height{
     min-height:100px;
      height: auto;
+     
 }
 .news__item{
     padding-top: 15px;
     border: 1px solid #d0d2d7;
     background: #fff;
+    
     box-shadow: 1px 6px 10px 6px rgb(0 0 0 / 43%);
+ 
+
 }
 .news__item:nth-child(even){
     background: #d0d2d7;
@@ -1024,13 +1203,15 @@ padding-bottom: 40px;
   display: none;
   /* position: absolute; upd: 24.10.2016 */
   position: fixed;
-  max-width: 850px;
-  height: 600px;
+  width: 100%;
+  
   z-index: 9999;
 }
 #magnify img {
-  width: 100%;
-  height: 75vh;
+    margin:0 auto;
+    padding: 15px;
+    width:80%;
+    height: 80%;
 }
 @media (max-width: 600px){
     #magnify {
@@ -1447,6 +1628,7 @@ padding-bottom: 40px;
 .galery img{
     width: 100%;
     height: 100%;
+    cursor: pointer;
     -o-object-fit: cover;
        object-fit: cover;    
 }
