--- a/website/main_app/templates/components/box-subtitle.html
+++ b/website/main_app/templates/components/box-subtitle.html
@@ -1,7 +1,7 @@
 {% block box-subtitle %}
 <section class="box-subtitle">
   <div class="container">
-    <h3 class="box-subtitle__title title">{{ text }}</h3>
+    <h3 class="box-subtitle__title title">{{ text|safe }}</h3>
   </div>
 </section>
 {% endblock %}
