исправил форму обратной связи. убрал отправку на почту (сохраняется в базе)

--- a/website/main_app/templates/components/contact_us.html
+++ b/website/main_app/templates/components/contact_us.html
@@ -18,7 +18,7 @@
                 {{ ContactForm.email }}
                 {{ ContactForm.message_title }}
                 {{ ContactForm.message_text }}
-                <button class="contact__form-btn" type="submit" onclick="ContactForm.submit();">Отправить</button>
+                <button class="contact__form-btn" type="submit">Отправить</button>
             </form>
         </div>
     </section>
