--- a/website/main_app/templates/components/faq.html
+++ b/website/main_app/templates/components/faq.html
@@ -5,6 +5,16 @@
     {% endblock %}
     <section class="faq">
         <div class="container">
+            <form method="POST" action="#" id="FaqForm" class="faq__search">{% csrf_token %}
+                {{ FaqForm.question }}
+                <button type="submit" class="faq__but">Задать</button>
+            </form>
+            {% for i in faq_on_top %}
+            <div class="faq__item">
+                <h3 class="faq__list-title">{{ i.question }}</h3>
+                <p class="faq__item-text">{{ i.answer }}</p>
+            </div>
+            {% endfor %}
             {% for i in faq %}
             <div class="faq__item">
                 <h3 class="faq__list-title">{{ i.question }}</h3>
