добавил капчу на обратную связь

--- a/website/main_app/templates/components/contact_us.html
+++ b/website/main_app/templates/components/contact_us.html
@@ -18,6 +18,7 @@
                 {{ ContactForm.email }}
                 {{ ContactForm.message_title }}
                 {{ ContactForm.message_text }}
+                {{ ContactForm.captcha }}
                 <button class="contact__form-btn" type="submit">Отправить</button>
             </form>
         </div>
